--- a/references.bib
+++ b/references.bib
@@ -111,3 +111,23 @@
 	month = mar,
 	year = {2014}
 }
+
+@misc{eurostat_electricity_2020,
+	title = {Electricity generation statistics – first results - {Statistics} {Explained}},
+	url = {https://ec.europa.eu/eurostat/statistics-explained/index.php/Electricity_generation_statistics_%E2%80%93_first_results},
+	abstract = {The most recent statistics are provided on the volumes of electricity that have been produced and supplied.},
+	urldate = {2020-08-27},
+	author = {Eurostat},
+	month = aug,
+	year = {2020}
+}
+
+
+@misc{iaea_country,
+	title = {Country {Nuclear} {Power} {Profiles}},
+	url = {https://cnpp.iaea.org/countryprofiles/France/France.htm},
+	abstract = {France},
+	urldate = {2020-08-27},
+	journal = {IAEA},
+	author = {IAEA}
+}
