modified tidytuesday references

--- a/references.bib
+++ b/references.bib
@@ -54,14 +54,12 @@
   }
 
   @misc{tidytuesday,
-	title = {European energy},
-	author = {rfordatascience},
-	url = {https://github.com/rfordatascience/tidytuesday},
-	abstract = {Official repo for the \#tidytuesday project. Contribute to rfordatascience/tidytuesday development by creating an account on GitHub.},
-	language = {en},
-	urldate = {2020-08-26},
-	journal = {GitHub}
-}
+    title = {tidytuesdayR: Access the Weekly 'TidyTuesday' Project Dataset},
+    author = {Ellis Hughes},
+    year = {2020},
+    note = {R package version 1.0.1},
+    url = {https://CRAN.R-project.org/package=tidytuesdayR},
+  }
 
 @misc{methodology_eurostat,
 	title = {Methodology},
