--- a/references.bib
+++ b/references.bib
@@ -70,6 +70,7 @@
 }
 
 @misc{twardy_greenhouse_2007,
+  author={NASA},
 	title = {Greenhouse {Gases} {Effect} on {Global} {Warming}},
 	url = {https://svs.gsfc.nasa.gov/20114},
 	urldate = {2020-08-26},
@@ -80,6 +81,7 @@
 }
 
 @misc{peninsula_2018,
+author={Peninsula Clean Energy},
 	title = {What is the difference between clean and renewable energy?},
 	url = {https://www.peninsulacleanenergy.com/faq-items/what-is-the-difference-between-clean-and-renewable-energy/},
 	abstract = {Clean energy is carbon-free energy that creates little to no greenhouse gas emissions. This is in contrast to fossil fuels, which produce a significant amount},
