--- a/index.Rmd
+++ b/index.Rmd
@@ -115,19 +115,18 @@ tibble(variables_2,class_2,desc_2) %>%
 
 The data in the tidytuesday package only contains yearly totals from 2016-2018. @tidytuesday However, monthly data can be found on the Eurostat website including data from 2010 until May 2020 as at 14-08-20. The statistics are collected and compiled by Member States. Eurostat prepared a template to gather this information. @methodology_eurostat
 
-```{r target-energy}
+```{r target-energy, eval=FALSE}
 target_energy <- read_tsv("data/t2020_31.tsv")
 write.csv(target_energy, 'target_energy.csv')
 target_energy <- read_csv("data/target_energy.csv")
 ```
 
-```{r tidying-data}
+```{r, eval=FALSE}
 target_energy <- target_energy[c(-12,-13,-14), 2:18]
-target_energy <- as_tibble(target_energy)
-#target_energy <- target_energy %>% rename(Country = "unit,indic_eu,geo\time") 
+target_energy <- as_tibble(target_energy) 
 ```
 
-```{r}
+```{r tidying-data}
 euro_table <- read_xls("data/euro_table.xls")
 euro_table <- euro_table %>% rename(Country = `Share of renewable energy in gross final energy consumption`,
                       `2004` = ...2,
@@ -145,7 +144,7 @@ euro_table <- euro_table %>% rename(Country = `Share of renewable energy in gros
                       `2016` = ...14,
                       `2017` = ...15,
                       `2018` = ...16,
-                      TARGET = ...17)
+                      `2020` = ...17)
 euro_table <- euro_table[c((-1:-5),(-43:-50)),]
 euro_table[37,1] <- "Kosovo"
 euro_table <- euro_table[-31,] #excluding switzerland because there are no values.
@@ -164,12 +163,35 @@ euro_table$`2015` <- as.numeric(euro_table$`2015`)
 euro_table$`2016` <- as.numeric(euro_table$`2016`)
 euro_table$`2017` <- as.numeric(euro_table$`2017`)
 euro_table$`2018` <- as.numeric(euro_table$`2018`)
-euro_table$TARGET <- as.numeric(euro_table$TARGET)
+euro_table$`2020` <- as.numeric(euro_table$`2020`)
 ```
 
-```{r}
-euro_table %>% ggplot(aes(y = Country)) +
-              geom_line(aes(x = `2004`))
+```{r target-longer}
+euro_table <- euro_table %>% pivot_longer(cols = `2004`:`2020`, names_to = "Year", values_to = "Percentage")
+euro_table$Year <- as.Date(as.character(euro_table$Year), format = "%Y")
+library(lubridate)
+euro_table$Year <- year(euro_table$Year)
+```
+
+```{r target-plot}
+target <- ggplot(euro_table %>% filter(Year %in% c(2010,2011,2012,2013,2014,2015,2016,2017,2018))) +
+  geom_line(aes(x=Year, y=Percentage, color=Country)) +
+  geom_point(aes(x=Year, y=Percentage, color=Country), data = euro_table %>% filter(Year == 2020)) +
+  theme(legend.position = "none") +
+  ylab("Share of energy consumed that is renewable energy (%)") +
+  ggtitle("Percentage of renewable energy consumed from 2010 - 2018") +
+  facet_wrap(~Country)
+
+ggplotly(target)
+```
+```{r, eval=FALSE}
+install.packages("babynames")
+library(babynames)
+don <- babynames %>% 
+  filter(name %in% c("Ashley", "Patricia", "Helen")) %>%
+  filter(sex=="F")
+ggplot(don, aes(x=year, y=n, group=name, color=name)) +
+    geom_line()
 ```
 
 # Analysis and findings
