--- a/index.Rmd
+++ b/index.Rmd
@@ -518,6 +518,70 @@ cbind(malta_en,malta) %>%
   kable_styling("hover")
 ```
 
+
+```{r cmp,message=FALSE,warning=FALSE} 
+# removing the level column for our analysis
+prod <- energy_types %>% distinct(type) #select(-level)%>%  filter(year == 2017)
+  #filtering the energy types to be hydro and pumped hydro for comparison
+  dplyr::filter(type ==c("Hydro" ,"Pumped hydro power"))
+
+electricity_prod <- prod %>% 
+  #converting the table above to wider format for computation
+  pivot_wider(names_from = type, values_from = energy) %>%
+  #grouping by country names and year for computation
+  group_by(country_name,year) %>% 
+  #calculating the difference between electricity produced by pumped hydro and hydro power and creating a new column called diff
+  mutate(diff = (Hydro - `Pumped hydro power`)) %>% 
+  #arranging the  new column diff by descending order to remove the 0.00 values in the plot
+  arrange(desc(diff)) %>% 
+  #taking into account the first 40 values for plot
+  head(40)
+
+#plotting a bar graph with x-axis country names and y-axis as the difference value 
+p1 <- ggplot(electricity_prod,aes(x = reorder(country_name,-diff), y = diff, fill = year)) + 
+  geom_col()+ 
+  #setting the country names to display at a angle 90 for readability
+  theme(axis.text.x = element_text(angle = 90),legend.position = "none") +
+  #giving the scales a pretty accurate scales instead of a e-scales using the scales package
+  scale_y_continuous(labels = scales::number_format())+
+  #changing the x-axis title/label to country names
+  xlab("country names") + 
+  #facet wrapping the plots by year
+  facet_wrap(~ year) +
+  #changing the plot having x-axis and y-axis interchanged so it is easier to read the country names
+  coord_flip()
+
+#adding ggplotly interaction to the above graph
+diff_plotly <- ggplotly(p1)
+  
+#creating another dataframe with just the energy type hydro for comparison
+hydro_pro <- energy_types %>% filter(type == "Hydro") %>% 
+  #grouping by the country names and the year
+  group_by(country_name,type,year) %>%
+  #calculating the average values of hydro energy for every year within each country
+  summarise(avg_energy = mean(energy)) %>% 
+  #arranging the avg_energy by descending order to remove the 0.00 values in the plot
+  arrange(desc(avg_energy)) %>% 
+  head(50)
+
+#plotting a bar graph for x-axis country names and y-axis with average energies 
+p2 <- ggplot(hydro_pro,aes(x = reorder(country_name,-avg_energy), y = avg_energy, fill = year)) + 
+  geom_col() +
+  theme(axis.text.x = element_text(angle = 90),legend.position = "none") +
+  xlab("country name") + 
+  facet_wrap(~ year) +
+  coord_flip()
+
+hydro_plotly <- ggplotly(p2)
+
+#arranging the two ggplotly plots into one plot using the subplot() from the plotly package
+subplot(diff_plotly,hydro_plotly,margin = 0.23) %>% 
+  layout(title = "Pumped hydro power                        vs                      Hydro power") 
+
+```
+
+
+
 # Conclusion 
 
 From our analysis we can see France, Germany, Spain, Norway and Sweden are some of the countries that lead the European production of renewable energy with nuclear being the most prominent renewable energy produced. Across all three years the total renewable energy produced exceeds the total conventional thermal energy produced with 2018 being the highest year. However, although this shows positive signs in the movement towards renewable energy, conventional thermal energy still dominates production in many European countries such as Germany and the United Kingdom making just under half the total energy production across Europe across all three years. 
